# keelson

./: .gitattributes  .gitignore  .pylintrc  404.html  CLAUDE.md  Cargo.toml  Dockerfile  README.md  conftest.py  docker-compose.cloud.yml  docker-compose.edge.yml  docker-compose.hc.yml  generate_docs.sh  index.html  infrastructure-guidelines.md  keelson-key-space-design.md  key-space-design.md  mkdocs.yml  package-lock.json  pyproject.toml  requirements-prod.txt  requirements.txt  requirements_connectors.txt  requirements_dev.txt  requirements_docs.txt  sitemap.xml  test.mcap  the-keelson-protocol.md
all/: CMakeLists.txt
brefv/cpp/: CMakeLists.txt  README.md  tag_type_map_to_header.j2
brefv/cpp/all/: CMakeLists.txt
brefv/cpp/include/brefv/: brefv.hpp
brefv/cpp/source/: brefv.cpp
brefv/cpp/test/: CMakeLists.txt
brefv/cpp/test/source/: test_brefv.cpp
brefv/rust/: Cargo.toml  build.rs
brefv/rust/src/: lib.rs
connectors/camera/: README.md  calibration-schema.json  pyproject.toml  requirements.txt
connectors/camera/tests/: conftest.py  test_camera_cli.py  test_camera_e2e.py
connectors/common/: pyproject.toml
connectors/common/src/keelson_connectors_common/: __init__.py  cli.py  exceptions.py  logging.py  queue_utils.py  signals.py
connectors/common/tests/: test_cli.py  test_exceptions.py  test_logging.py  test_queue_utils.py  test_signals.py
connectors/entity_health/: README.md  example-config.json  pyproject.toml  requirements.txt
connectors/entity_health/entity_health/: __init__.py  evaluator.py
connectors/entity_health/tests/: conftest.py  test_entity_health_cli.py  test_entity_health_e2e.py  test_evaluator_unit.py  test_set_config_unit.py
connectors/foxglove/: README.md  pyproject.toml  requirements.txt
connectors/foxglove/tests/: test_foxglove_cli.py  test_foxglove_e2e.py
connectors/hand_controller/: .dockerignore  CLAUDE.md  CONTRIBUTING.md  README.md  TODO.md  docker-compose.hc.profiles.yml  pyproject.toml  requirements.txt
connectors/hand_controller/.devcontainer/: devcontainer.json
connectors/hand_controller/examples/: joystick_reader.py
connectors/hand_controller/profiles/: ssrov.yaml
connectors/hand_controller/scripts/: hid_relay.py
connectors/hand_controller/tests/: conftest.py  test_hc2keelson.py
connectors/labjack/: README.md  config-schema.json  example-config.json  pyproject.toml  requirements.txt
connectors/labjack/tests/: conftest.py  test_labjack_cli.py  test_labjack_e2e.py  test_labjack_read.py  test_labjack_scaling.py
connectors/mavlink/: GETTING-STARTED.md  README.md  ZENOH_API.md  docker-compose.mavlink.yml  pyproject.toml  requirements.txt
connectors/mavlink/tests/: conftest.py  test_injection_config.py  test_injection_emit.py  test_mavlink_cli.py  test_mavlink_e2e.py  test_mavlink_mapping.py  test_mavlink_rpcs.py  test_mavlink_subscribe.py  test_mission_geofence_translation.py
connectors/mcap/: README.md  pyproject.toml  requirements.txt
connectors/mcap/tests/: conftest.py  test_mcap_battle.py  test_mcap_cli.py  test_mcap_e2e.py  test_mcap_replay_rpc_e2e.py  test_mcap_utils.py  test_mcap_writer.py
connectors/mediamtx/: README.md  pyproject.toml  requirements.txt
connectors/mediamtx/examples/: browser-client-example.html  verify-whep-turn.py
connectors/mediamtx/examples/coturn/: README.md  docker-compose.yml  traefik-dynamic.yml  turnserver.conf
connectors/mediamtx/examples/mediamtx-turn/: docker-compose.yml
connectors/mediamtx/tests/: test_mediamtx_cli.py  test_mediamtx_e2e.py
connectors/mockups/: README.md  pyproject.toml  requirements.txt
connectors/mockups/tests/: test_mockups_cli.py  test_mockups_e2e.py
connectors/nmea/: README.md  pyproject.toml  requirements.txt
connectors/nmea/tests/: conftest.py  test_keelson2n2k_gateway.py  test_keelson2n2k_generators.py  test_keelson2nmea_generators.py  test_n2k2keelson_ais.py  test_n2k2keelson_gateway.py  test_n2k_cli_stdio.py  test_n2k_gateway.py  test_ngx1.py  test_nmea0183_handlers.py  test_nmea2000_cli.py  test_nmea2000_handlers.py  test_nmea_e2e.py
connectors/nmea/tests/data/: UNIHEADING_samples.txt
connectors/platform/: README.md  config-schema.json  example-config.json  pyproject.toml  requirements.txt
connectors/platform/tests/: test_platform_cli.py  test_platform_e2e.py
connectors/rorkult/: GETTING-STARTED.md  README.md  ZENOH_API.md  pyproject.toml  requirements.txt
connectors/rorkult/rorkult/: __init__.py  control_axis.py  framing.py  health.py  transport.py
connectors/rorkult/tests/: conftest.py  test_control_axis.py  test_framing.py  test_health.py  test_rorkult_cli.py  test_rorkult_e2e.py  test_transport.py
connectors/tak/: README.md  pyproject.toml  requirements.txt
connectors/tak/tests/: conftest.py  test_roundtrip.py  test_tak_data_package.py  test_tak_e2e.py  test_tak_roundtrip.py  test_tak_specific_logic.py
hold/: CMakeLists.txt
hold/source/: hold.cpp
hold/tests/: test_hold.cpp
keelson-record/: Cargo.toml  build.rs  main.py  record  requirements.txt
keelson-record/src/: main.rs
sdks/python/: CLAUDE.md  README.md  generate_python.sh  pyproject.toml  setup.py
sdks/python/examples/: mcap-reader-to-df.ipynb
sdks/python/keelson/: Envelope_pb2.py  Envelope_pb2.pyi  __init__.py  codec.py  dev_tools.py  helpers.py  mcap_file_reader.py  procedures.yaml  qos.py  read_protobuf_example.py  subjects.yaml  tags.yaml  utils.py
sdks/python/keelson/interfaces/: Configurable_pb2.py  Configurable_pb2.pyi  NetworkPingPong_pb2.py  Response_pb2.py  (+6 more)
sdks/python/tests/: Experiments.ipynb  example_rerun_read_mcap.py  subjects.md  test_helpers.py  test_liveliness_wildcards.py  test_qos.py  test_rerun.py  test_scaffolding_cli.py  test_scaffolding_exceptions.py  test_scaffolding_liveliness.py  test_scaffolding_logging.py  test_scaffolding_queue_utils.py  test_scaffolding_signals.py  test_sdk.py  test_track_store.py
sdks/rust/: .gitignore  Cargo.toml  README.md  build.rs  generate_rust.sh
sdks/rust/src/: envelope.rs  error.rs  keys.rs  lib.rs  proto.rs  reflection.rs  subjects.rs
sdks/rust/tests/: test_sdk.rs
(+459 files in other folders)
