[package]
name = "keelson-record"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
shared-memory = ["zenoh/shared-memory"]

[dependencies]
anyhow = "1.0.75"
bytes = "1.5.0"
clap = { version = "4.4.6", features = ["derive", "string"] }
ctrlc = "3.4.1"
env_logger = "0.10.0"
log = "0.4.20"
mcap = "0.7.1"
prost = "0.12.1"
prost-reflect = "0.12.0"
prost-types = "0.12.1"
zenoh = "0.10.0-rc"

[build-dependencies]
prost-build = "0.12.1"
