[package]
name = "brefv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
prost = "0.12.1"
prost-reflect = "0.12.0"
prost-types = "0.12.1"

[build-dependencies]
glob = "0.3.1"
prost-build = "0.12.1"
