[project]
name = "keelson-connector-camera"
version = "0.0.0"
description = "Generic camera connector for Keelson (RTSP/OpenCV)"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.uv.sources]
keelson = { workspace = true }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
