[project]
name = "keelson-connector-hand-controller"
version = "0.0.0"
description = "Keelson/Zenoh connector for joystick/gamepad controllers (SSROV HC, Logitech F310/F710)"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.uv.sources]
keelson = { workspace = true }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
