[project]
name = "keelson-connector-mcap"
version = "0.0.0"
description = "MCAP recording and replay connector for Keelson"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.uv.sources]
keelson = { workspace = true }
keelson-connectors-common = { workspace = true }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
