[project]
name = "keelson-connector-mockups"
version = "0.0.0"
description = "Mock data generators for Keelson testing"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.uv.sources]
keelson = { workspace = true }
keelson-connectors-common = { workspace = true }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
