[project]
name = "keelson-connector-nmea"
version = "0.0.0"
description = "NMEA0183/NMEA2000 bidirectional connector for Keelson"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.uv.sources]
keelson = { workspace = true }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
