[project]
name = "keelson"
version = "0.5.0a8"
description = "A Python Software Development Kit for Keelson"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Fredrik Olsson", email = "fredrik.x.olsson@ri.se" }
]
maintainers = [
    { name = "Fredrik Olsson", email = "fredrik.x.olsson@ri.se" }
]

dependencies = [
    "eclipse-zenoh>=1.2.1",
    "protobuf>=5.29.1",
    "pyyaml",
    "parse",
]

[project.urls]
Homepage = "https://github.com/RISE-Maritime/keelson"
Repository = "https://github.com/RISE-Maritime/keelson"
Documentation = "https://rise-maritime.github.io/keelson/"

[project.entry-points."zenoh_cli.codecs.encoders"]
"keelson-enclose-from-text" = "keelson.codec:enclose_from_text"
"keelson-enclose-from-base64" = "keelson.codec:enclose_from_base64"
"keelson-enclose-from-json" = "keelson.codec:enclose_from_json"

[project.entry-points."zenoh_cli.codecs.decoders"]
"keelson-uncover-to-text" = "keelson.codec:uncover_to_text"
"keelson-uncover-to-base64" = "keelson.codec:uncover_to_base64"
"keelson-uncover-to-json" = "keelson.codec:uncover_to_json"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["keelson"]

[tool.hatch.build.targets.sdist]
include = [
    "keelson/**/*.py",
    "keelson/**/*.pyi",
    "keelson/**/*.yaml",
    "keelson/**/*.bin",
]
