[package]
name = "keelson"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.12"
prost-types = "0.12"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
parse = "0.1"
thiserror = "1.0"
prost-reflect = { version = "0.12", features = ["serde"] }

[build-dependencies]
prost-build = "0.12"
glob = "0.3"

[lib]
crate-type = ["lib"]
